# partialZipBrowser

./: .gitignore  Makefile.am  README  configure.ac
.github/workflows/: main.yml
pzb/: Makefile.am  all_pzb.h  main.cp  main.cpp  pzb.cpp  pzb.hpp
pzb.xcodeproj/: project.pbxproj
pzb.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pzb.xcodeproj/xcuserdata/tihmstar.xcuserdatad/xcschemes/: pzb.xcscheme  xcschememanagement.plist
